Bring classed from auto generator
